--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_auth: ^4.7.2
   google_sign_in: ^6.1.4
   firebase_core: ^2.15.0
+  flutter_local_notifications: ^15.1.0+1
+  flutter_datetime_picker: ^1.5.1
 
 dev_dependencies:
   flutter_test:
